fixing navbar spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -89,7 +89,9 @@
   margin: 0;
   width: 100%;
   span {
+    width: 100%;
     text-align: center;
+    padding: 0;
   }
   .headers {
     font-family: 'Comfortaa', cursive;
